--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,7 +23,7 @@ required = [
 
 [[constraint]]
   name = "github.com/kubernetes-sigs/kube-batch"
-  version = "v0.3"
+  version = "0.5.0"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
